# CalculatorProject

./: .gitignore  CMakeLists.txt  Jenkinsfile
src/: calculator.cpp  calculator.h
tests/: test_calculator.cpp
